<resources>
    <string name="app_name">kalkulator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="plus_minus">+/-</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="modulo">%</string>
    <string name="clear">AC</string>
    <string name="dot">.</string>
    <string name="ERROR">ERROR</string>
    <string name="square">x^2</string>
    <string name="cube">x^3</string>
    <string name="sqrt">SQRT(X)</string>
    <string name="factorial">x!</string>
    <string name="log10">log10</string>
</resources>