<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/textView"
        android:fontFamily="serif"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#42A5F5"
        android:gravity="end|center_vertical"
        android:text="@string/zero"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="0,1,2,3"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_light">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light"
                android:onClick="clearEvent"
                android:text="@string/clear"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light"
                android:onClick="signEvent"
                android:text="@string/plus_minus"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_modulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light"
                android:onClick="operatorEventNow"
                android:text="@string/modulo"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light"
                android:onClick="operatorEvent"
                android:text="@string/divide"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_light">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/seven"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/eight"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/nine"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light"
                android:onClick="operatorEvent"
                android:text="@string/multiply"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_light">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/four"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/five"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/six"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light"
                android:onClick="operatorEvent"
                android:text="@string/minus"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_light">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/one"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/two"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/three"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light"
                android:onClick="operatorEvent"
                android:text="@string/plus"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_light">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/zero"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"/>


            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:onClick="numberEvent"
                android:text="@string/dot"
                android:textColor="#FFFFFF" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="monospace"
                android:id="@+id/button_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light"
                android:onClick="equalEvent"
                android:text="@string/equal"
                android:textColor="#FFFFFF" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>